fix spacing around sections for item page - part of #356

--- a/web/themes/custom/asulib_barrio/scss/components/node.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/node.scss
@@ -108,3 +108,10 @@
 .field--name-field-typed-identifier {
     word-break: break-all;
 }
+
+#details, #interact {
+    margin-bottom: $xs-padding;
+}
+#interact, #machine {
+    margin-top: $xs-padding;
+}
