--- a/web/themes/custom/asulib_barrio/scss/components/page.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/page.scss
@@ -19,15 +19,10 @@
   .field--name-field-rich-description {
     margin-bottom: $spacer;
   }
-  .content-section {
-    margin-bottom: ($spacer * 2);
-  }
 }
 .node--type-collection .col-md-12 {
-//   padding-top: 0;
   padding-left: 0;
   padding-right: 0;
-//   padding-bottom: 0;
 }
 
 .small-margin-bottom {
